--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     window.onload = function() {
-      socket = io.connect('http://192.168.2.2:8080');
+      socket = io.connect('http://localhost:8080');
       socket.on('news', function (data) {
         log(data)
         
