Stripped down version of skeleton

--- a/index.html
+++ b/index.html
@@ -30,19 +30,15 @@
     </style>
 
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="https://raw.github.com/FrancisShanahan/Identicon5/master/jquery.identicon5.js"></script> 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
   
     <script>
     function log(text){
         var _body = $('#stuff');
-        _body.append("<p><span class='random'>" + text.sender + "</span>" + text.hello + "</p>")
+        _body.append("<p><span class='random'>" + text.sender + "</span> : " + text.hello + "</p>")
 
         var objDiv = document.getElementById("content");
         objDiv.scrollTop = objDiv.scrollHeight;
-        $(".random").identicon5()
-        $(".random").removeClass("random")
     }
 
     window.onload = function() {
@@ -55,13 +51,7 @@
         log(data);
       })
 
-      socket.on('collab', function(data) {
-        console.log(data.shape);
-        window.shape = data.shape
-        $("#draggable").css("left",data.shape.x + "px")
-        $("#draggable").css("top",data.shape.y + "px")
-
-      })
+    
 
       $("#message").keyup(function (e) {
         if (e.keyCode == 13) {
@@ -69,14 +59,7 @@
         }
         });
 
-      $("#draggable").draggable({
-
-        stop: function( event, ui ) {
-            window.shape.x = parseInt( $(this).css("left"), 10)
-            window.shape.y = parseInt( $(this).css("top"), 10)
-            socket.emit("collab", {shape: window.shape})
-        }
-      })
+     
 
     }
 
